fix the effect being able to go overflow and custom effect overwritting

--- a/id-creator/src/component/InputTab/InputPage.css
+++ b/id-creator/src/component/InputTab/InputPage.css
@@ -40,7 +40,7 @@
 }
 
 .skill-effect-input{
-    height: 200px;
+    min-height: 200px;
 }
 
 .drop-down-container{
